# Maid

./: .gitignore  README.md  daily_jobs.py  pyproject.toml
.github/workflows/: schedules.yml
maid/: send_mail.py  utils.py
maid/flows/: get_student_housing_aarhus.py
maid/prep/: create_auto_files.py  create_bucket_for_artificats.py
